# toy-db

./: .gitignore  README.md  dune-project  toydb.opam
.github/workflows/: ci.yaml
lib/: api.ml  btree_file.ml  btree_header_page.ml  btree_internal_page.ml  btree_leaf_page.ml  btree_node.ml  btree_page.ml  buffer_pool.ml  buffer_pool.mli  catalog.ml  catalog.mli  cursor.ml  cursor.mli  db_file.ml  db_page.ml  dune  error.ml  heap_file.ml  heap_page.ml  lexer.mll  lock_manager.ml  log.ml  logical_plan.ml  logical_plan.mli  packed_dbfile.ml  page_key.ml  parser.mly  parser_wrapper.ml  physical_plan.ml  physical_plan.mli  syntax.ml  table_registry.ml  table_registry.mli  table_schema.ml  toydb.ml  transaction.ml  transaction_id.ml  transaction_id.mli  tuple.ml  tuple_desc.ml  (+3 more)
lib/core/: dune  error.ml  log.ml  record_id.ml  syntax.ml  tuple.ml  type.ml  value.ml
lib/logical_plan/: dune  error.ml  error.mli  field.ml  fresh_alias.ml  group_by_env.ml  logical_plan.ml  logical_plan.mli  select_list_env.ml  table_env.ml  table_env.mli  table_field.ml
lib/metadata/: db_file.ml  dune  error.ml  error.mli  table_registry.ml  table_registry.mli  table_schema.ml
lib/physical_plan/: aggregate.ml  attribute.ml  dune  expr.ml  physical_plan.ml  physical_plan.mli  tuple_desc.ml
lib/sql_parser/: dune  lexer.mll  parser.mly  sql_parser.ml
lib/storage/: btree_file.ml  btree_file.mli  btree_header_page.ml  btree_header_page.mli  btree_internal_page.ml  btree_leaf_page.ml  btree_page.ml  buffer_pool.ml  buffer_pool.mli  dune  generic_page.ml  heap_data_page.ml  heap_file.ml  heap_file.mli  heap_header_page.ml  heap_page.ml  lock_manager.ml  lock_manager.mli  page_io.ml  page_key.ml  perm.ml  storage_layout.ml
lib/storage/page/: btree_header_page.ml  btree_header_page.mli  btree_internal_page.ml  btree_internal_page.mli  btree_leaf_page.ml  btree_leaf_page.mli  btree_node.ml  btree_op.ml  btree_page.ml  cursor.ml  db_page.ml  dune  generic_page.ml  heap_data_page.ml  heap_data_page.mli  heap_header_page.ml  heap_header_page.mli  heap_page.ml  layout.ml
test/: dune  test_btree_file.ml  test_catalog.ml  test_heap_file.ml  test_sql.ml  test_transaction.ml  test_utils.ml
